--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
+  <script src="script.js" defer></script>
   <title>Document</title>
 </head>
 <body>
@@ -12,23 +13,12 @@
     <label for="search">Search Em</label>
     <input type="search" id="search">
   </div>
-  <div class="user-cards">
+  <div class="user-cards" data-user-cards-container></div>
+  <template data-user-template>
     <div class="card">
-      <div class="header">heres sum name</div>
-      <div class="body">something@mail.com</div>
+      <div class="header" data-header></div>
+      <div class="body" data-body></div>
     </div>
-    <div class="card">
-      <div class="header">heres sum name</div>
-      <div class="body">something@mail.com</div>
-    </div>
-    <div class="card">
-      <div class="header">heres sum name</div>
-      <div class="body">something@mail.com</div>
-    </div>
-    <div class="card">
-      <div class="header">heres sum name</div>
-      <div class="body">something@mail.com</div>
-    </div>
-  </div>
+  </template>
 </body>
 </html>
