--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="search-wrapper">
     <label for="search">Search Em</label>
-    <input type="search" id="search">
+    <input type="search" id="search" data-search>
   </div>
   <div class="user-cards" data-user-cards-container></div>
   <template data-user-template>
